2010-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed ChunkedDecoder. It does not read trailer and final CRLF.
	* src/ChunkedDecoder.cc
	* src/ChunkedDecoder.h
	* test/ChunkedDecoderTest.cc

2010-07-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unusable typedefs
	* src/FileAllocationIterator.h
	* src/MultiDiskAdaptor.cc
	* src/MultiFileAllocationIterator.h
	* src/SingleFileAllocationIterator.h

2010-07-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that DownloadContext::resetDownloadStartTime() never
	be called in downloads whose total length is unknown.  This causes
	avg speed in Download Results is always 0 for these downloads.
	* src/RequestGroup.cc
	* src/BtFileAllocationEntry.cc
	* src/StreamFileAllocationEntry.cc

2010-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that AdaptiveFileAllocationIterator::finished()
	returns false even if offset_ >= totalLength_. This causes
	ftruncate error for seeding torrents.
	* src/AdaptiveFileAllocationIterator.cc

2010-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Send each CWD component of FTP URI in separate CWD command as
	described in RFC1738.
	* src/FtpConnection.cc
	* src/FtpConnection.h
	* src/FtpInitiateConnectionCommand.cc
	* src/FtpNegotiationCommand.cc
	* src/FtpNegotiationCommand.h
	* test/FtpConnectionTest.cc

2010-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented that aria2 supports Chromium/Google Chrom cookies file.
	* doc/aria2c.1.txt
	* README

2010-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that aria2 cannot handle %2F in FTP URI properly.
	If directory component starts with %2F which percent-encode of
	'/', client should issue CWD to absolute path, but aria2 does not
	do that. It just issues relative path and download fails.
	* src/FtpConnection.cc
	* test/FtpConnectionTest.cc
